package routes

import (
	"context"
	"net/http"

	"github.com/RonnieZad/nyumba-go-grpc-project/api-gateway/pkg/auth/pb"
	"github.com/gin-gonic/gin"
)

func GetUser(ctx *gin.Context, c pb.AuthServiceClient) {
	id := ctx.Param("id")

	res, err := c.GetUser(context.Background(), &pb.GetUserRequest{
		UserId: id,
	})

	if err != nil {
		ctx.AbortWithError(http.StatusBadGateway, err)
		return
	}

	ctx.JSON(http.StatusCreated, &res)
}
